Fix reviews design on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -667,6 +667,13 @@ sup {
    margin-bottom:0!important;
  } 
 
+ @media (max-width: 400px) {
+  .review-stars {
+    display:none;
+  }
+ }
+
+
 /* ---Faq section--- */
 
 .faq {
